--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -1,26 +1,64 @@
 {
-  "Total tokens": "合計トークン",
-  "PHEN": "PHEN",
+  "Home": "ホーム",
   "Boosts": "ブースト",
-  "Skins": "スキン",
+  "Game": "ゲーム",
+  "Tasks": "タスク",
+  "Profile": "プロフィール",
+  "+ Add boosts": "+ ブーストを追加",
+  "Total tokens": "トークンの合計",
   "Language": "言語",
-  "Settings": "設定",
-  "Connect TON Wallet": "TONウォレットを接続",
-  "Your address": "あなたのアドレス",
-  "Farm PHEN Tokens": "PHENトークンをファームする",
+  "Farm tokens": "トークンをファーム",
   "Farm": "ファーム",
+  "Claim": "請求",
   "Listing price": "上場価格",
   "Farming end": "ファーミング終了",
-  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "ベスティング日程は上場が近づいた際にチームから発表されます。最新情報をお見逃しなく。",
-  "Presale": "プレセール",
-  "Presale price": "プレセール価格",
-  "Buy": "購入",
+  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "ベスティング日は上場が近づくにつれてチームから発表されます。アップデートをお待ちください。",
   "Airdrop": "エアドロップ",
-  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "エアドロップに参加するには、プレセール中に50ドル相当のトークンを購入してください。",
+  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "エアドロップに参加するには、プレセール中に$50相当のトークンを購入してください。",
   "Join the Airdrop": "エアドロップに参加",
-  "Join our family": "私たちのファミリーに参加",
-  "Join the friendly Phenerium family and take part in sweepstakes!": "フレンドリーなPheneriumファミリーに参加し、抽選に参加しましょう！",
-  "Invite friends and get 500 PHEN for each!": "友達を招待して、一人につき500 PHENをゲット！",
-  "No friends yet": "まだ友達がいません",
-  "Invite": "招待"
+  "Join our family": "私たちの家族に参加",
+  "Join the friendly Phenerium family and take part in sweepstakes!": "フレンドリーなPheneriumファミリーに参加して、抽選会に参加しましょう！",
+  "Invite friends and get 500 PHEN for each!": "友達を招待して、1人につき500 PHENを獲得！",
+  "Invite": "招待",
+  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": "私たちはTelegramのアフィリエイト紹介プログラムにも参加しており、友達が使ったスターの50%を獲得できます！",
+  "Paste your Telegram referral link below and share for free Stars!": "下にあなたのTelegram紹介リンクを貼り付けて、無料のスターを獲得するためにシェアしてください！",
+  "Invite for free Stars": "無料のスターのために招待",
+  "Where can I get a Telegram referral link?": "Telegramの紹介リンクはどこで入手できますか？",
+  "Open Phenerium": "Pheneriumを開く",
+  "Open Phenerium, and go to the info menu.": "Pheneriumを開き、情報メニューに移動してください。",
+  "Find Affiliate Program": "アフィリエイトプログラムを見つける",
+  "Scroll to 'Affiliate Program' and select one.": "「アフィリエイトプログラム」までスクロールして、1つ選択してください。",
+  "Copy Link": "リンクをコピー",
+  "Locate the referral link and copy it.": "紹介リンクを見つけてコピーしてください。",
+  "Go to 'Friends'": "「友達」に移動",
+  "Return to Phenerium and go to the 'Friends' section.": "Pheneriumに戻り、「友達」セクションに移動してください。",
+  "Paste and Done": "貼り付けて完了",
+  "Paste the link into the field and press 'Done'.": "リンクをフィールドに貼り付け、「完了」を押してください。",
+  "Get Bonus": "ボーナスを獲得",
+  "Bonus will be credited automatically after submission.": "ボーナスは提出後に自動的に付与されます。",
+  "Farming Boosts": "ファーミングブースト",
+  "You dont have any boosts 😔": "ブーストがありません 😔",
+  "Add Boosts": "ブーストを追加",
+  "Buy": "購入",
+  "Select Language": "言語を選択",
+  "No content": "コンテンツなし",
+  "Cases": "ケース",
+  "Robot Assistants": "ロボットアシスタント",
+  "Roadmap": "ロードマップ",
+  "Cosmo Forge": "コスモフォージ",
+  "Shuttle Dock": "シャトルドック",
+  "Warehouse": "倉庫",
+  "Collections ✨": "コレクション ✨",
+  "Basic": "基本",
+  "Bronze": "倉庫",
+  "Silver": "シルバー",
+  "Gold": "ゴールド",
+  "Platinum": "プラチナ",
+  "Diamond": "ダイヤモンド",
+  "Friends": "友達",
+  "Bronze Collection": "ブロンズコレクション",
+  "Silver Collection": "シルバーカレクション",
+  "Gold Collection": "ゴールドコレクション",
+  "Platinum Collection": "プラチナコレクション",
+  "Diamond Collection": "ダイヤモンドコレクション"
 }
