--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -1,26 +1,64 @@
 {
-  "Total tokens": "总代币",
-  "PHEN": "PHEN",
+  "Home": "首页",
   "Boosts": "加速",
-  "Skins": "皮肤",
+  "Game": "游戏",
+  "Tasks": "任务",
+  "Profile": "个人资料",
+  "+ Add boosts": "+ 添加加速",
+  "Total tokens": "总代币",
   "Language": "语言",
-  "Settings": "设置",
-  "Connect TON Wallet": "连接 TON 钱包",
-  "Your address": "您的地址",
-  "Farm PHEN Tokens": "PHEN 代币农场",
+  "Farm tokens": "耕种代币",
   "Farm": "农场",
+  "Claim": "领取",
   "Listing price": "上市价格",
-  "Farming end": "农场结束",
-  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "解锁日期将在上市前由团队公布。请关注最新消息。",
-  "Presale": "预售",
-  "Presale price": "预售价格",
-  "Buy": "购买",
+  "Farming end": "耕种结束",
+  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "归属日期将在上市前由团队宣布。请关注更新。",
   "Airdrop": "空投",
   "To participate in the airdrop, purchase tokens worth $50 during the presale.": "要参与空投，请在预售期间购买价值50美元的代币。",
   "Join the Airdrop": "加入空投",
-  "Join our family": "加入我们的大家庭",
-  "Join the friendly Phenerium family and take part in sweepstakes!": "加入友好的 Phenerium 大家庭，参加抽奖活动！",
-  "Invite friends and get 500 PHEN for each!": "邀请朋友，每人可获得 500 PHEN！",
-  "No friends yet": "暂无好友",
-  "Invite": "邀请"
+  "Join our family": "加入我们的家庭",
+  "Join the friendly Phenerium family and take part in sweepstakes!": "加入友好的Phenerium家庭，参与抽奖活动！",
+  "Invite friends and get 500 PHEN for each!": "邀请朋友，每人可获得500 PHEN！",
+  "Invite": "邀请",
+  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": "我们还参与Telegram的联盟推荐计划，您可以获得朋友花费的星星的50%！",
+  "Paste your Telegram referral link below and share for free Stars!": "在下方粘贴您的Telegram推荐链接并分享以获得免费星星！",
+  "Invite for free Stars": "邀请以获得免费星星",
+  "Where can I get a Telegram referral link?": "我在哪里可以获得Telegram推荐链接？",
+  "Open Phenerium": "打开Phenerium",
+  "Open Phenerium, and go to the info menu.": "打开Phenerium，然后转到信息菜单。",
+  "Find Affiliate Program": "找到联盟计划",
+  "Scroll to 'Affiliate Program' and select one.": "滚动到“联盟计划”并选择一个。",
+  "Copy Link": "复制链接",
+  "Locate the referral link and copy it.": "找到推荐链接并复制。",
+  "Go to 'Friends'": "转到“朋友”",
+  "Return to Phenerium and go to the 'Friends' section.": "返回Phenerium并转到“朋友”部分。",
+  "Paste and Done": "粘贴并完成",
+  "Paste the link into the field and press 'Done'.": "将链接粘贴到字段中并按“完成”。",
+  "Get Bonus": "获取奖金",
+  "Bonus will be credited automatically after submission.": "提交后奖金将自动记入。",
+  "Farming Boosts": "耕种加速",
+  "You dont have any boosts 😔": "您没有任何加速 😔",
+  "Add Boosts": "添加加速",
+  "Buy": "购买",
+  "Select Language": "选择语言",
+  "No content": "无内容",
+  "Cases": "箱子",
+  "Robot Assistants": "机器人助手",
+  "Roadmap": "路线图",
+  "Cosmo Forge": "宇宙锻造厂",
+  "Shuttle Dock": "穿梭码头",
+  "Warehouse": "仓库",
+  "Collections ✨": "收藏 ✨",
+  "Basic": "基础",
+  "Bronze": "仓库",
+  "Silver": "银",
+  "Gold": "金",
+  "Platinum": "铂金",
+  "Diamond": "钻石",
+  "Friends": "朋友",
+  "Bronze Collection": "青铜收藏",
+  "Silver Collection": "银收藏",
+  "Gold Collection": "金收藏",
+  "Platinum Collection": "铂金收藏",
+  "Diamond Collection": "钻石收藏"
 }
