--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -1,26 +1,64 @@
 {
+  "Home": "होम",
+  "Boosts": "बूस्ट",
+  "Game": "गेम",
+  "Tasks": "कार्य",
+  "Profile": "प्रोफाइल",
+  "+ Add boosts": "+ बूस्ट जोड़ें",
   "Total tokens": "कुल टोकन",
-  "PHEN": "PHEN",
-  "Boosts": "बूस्ट्स",
-  "Skins": "स्किन्स",
   "Language": "भाषा",
-  "Settings": "सेटिंग्स",
-  "Connect TON Wallet": "TON वॉलेट कनेक्ट करें",
-  "Your address": "आपका पता",
-  "Farm PHEN Tokens": "PHEN टोकन की खेती करें",
-  "Farm": "खेती",
+  "Farm tokens": "टोकन की खेती",
+  "Farm": "खेत",
+  "Claim": "दावा करें",
   "Listing price": "लिस्टिंग मूल्य",
-  "Farming end": "खेती समाप्ति",
-  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "वेस्टिंग तिथि लिस्टिंग के करीब टीम द्वारा घोषित की जाएगी। अपडेट के लिए जुड़े रहें।",
-  "Presale": "प्रीसेल",
-  "Presale price": "प्रीसेल मूल्य",
-  "Buy": "खरीदें",
+  "Farming end": "खेती समाप्त",
+  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "वेस्टिंग तारीख की घोषणा टीम द्वारा लिस्टिंग के करीब की जाएगी। अपडेट के लिए बने रहें।",
   "Airdrop": "एयरड्रॉप",
   "To participate in the airdrop, purchase tokens worth $50 during the presale.": "एयरड्रॉप में भाग लेने के लिए, प्रीसेल के दौरान $50 मूल्य के टोकन खरीदें।",
   "Join the Airdrop": "एयरड्रॉप में शामिल हों",
   "Join our family": "हमारे परिवार में शामिल हों",
-  "Join the friendly Phenerium family and take part in sweepstakes!": "मित्रतापूर्ण Phenerium परिवार में शामिल हों और लकी ड्रा में भाग लें!",
-  "Invite friends and get 500 PHEN for each!": "मित्रों को आमंत्रित करें और प्रत्येक के लिए 500 PHEN प्राप्त करें!",
-  "No friends yet": "अभी तक कोई मित्र नहीं",
-  "Invite": "आमंत्रित करें"
+  "Join the friendly Phenerium family and take part in sweepstakes!": "दोस्ताना Phenerium परिवार में शामिल हों और स्वीपस्टेक्स में भाग लें!",
+  "Invite friends and get 500 PHEN for each!": "दोस्तों को आमंत्रित करें और प्रत्येक के लिए 500 PHEN प्राप्त करें!",
+  "Invite": "आमंत्रित करें",
+  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": "हम टेलीग्राम संबद्ध रेफरल प्रोग्राम में भी भाग लेते हैं, जहां आप अपने दोस्तों द्वारा खर्च किए गए सितारों का 50% प्राप्त कर सकते हैं!",
+  "Paste your Telegram referral link below and share for free Stars!": "नीचे अपना टेलीग्राम रेफरल लिंक पेस्ट करें और मुफ्त सितारों के लिए साझा करें!",
+  "Invite for free Stars": "मुफ्त सितारों के लिए आमंत्रित करें",
+  "Where can I get a Telegram referral link?": "मुझे टेलीग्राम रेफरल लिंक कहां से मिलेगा?",
+  "Open Phenerium": "Phenerium खोलें",
+  "Open Phenerium, and go to the info menu.": "Phenerium खोलें, और जानकारी मेनू पर जाएं।",
+  "Find Affiliate Program": "संबद्ध प्रोग्राम ढूंढें",
+  "Scroll to 'Affiliate Program' and select one.": "'संबद्ध प्रोग्राम' तक स्क्रॉल करें और एक चुनें।",
+  "Copy Link": "लिंक कॉपी करें",
+  "Locate the referral link and copy it.": "रेफरल लिंक ढूंढें और इसे कॉपी करें।",
+  "Go to 'Friends'": "'दोस्तों' पर जाएं",
+  "Return to Phenerium and go to the 'Friends' section.": "Phenerium पर वापस जाएं और 'दोस्तों' अनुभाग पर जाएं।",
+  "Paste and Done": "पेस्ट करें और हो गया",
+  "Paste the link into the field and press 'Done'.": "लिंक को फ़ील्ड में पेस्ट करें और 'हो गया' दबाएं।",
+  "Get Bonus": "बोनस प्राप्त करें",
+  "Bonus will be credited automatically after submission.": "सबमिशन के बाद बोनस स्वचालित रूप से जमा हो जाएगा।",
+  "Farming Boosts": "खेती बूस्ट",
+  "You dont have any boosts 😔": "आपके पास कोई बूस्ट नहीं है 😔",
+  "Add Boosts": "बूस्ट जोड़ें",
+  "Buy": "खरीदें",
+  "Select Language": "भाषा चुनें",
+  "No content": "कोई सामग्री नहीं",
+  "Cases": "केस",
+  "Robot Assistants": "रोबोट सहायक",
+  "Roadmap": "रोडमैप",
+  "Cosmo Forge": "कॉस्मो फोर्ज",
+  "Shuttle Dock": "शटल डॉक",
+  "Warehouse": "वेयरहाउस",
+  "Collections ✨": "संग्रह ✨",
+  "Basic": "बेसिक",
+  "Bronze": "वेयरहाउस",
+  "Silver": "सिल्वर",
+  "Gold": "गोल्ड",
+  "Platinum": "प्लेटिनम",
+  "Diamond": "डायमंड",
+  "Friends": "दोस्त",
+  "Bronze Collection": "ब्रॉन्ज़ संग्रह",
+  "Silver Collection": "सिल्वर संग्रह",
+  "Gold Collection": "गोल्ड संग्रह",
+  "Platinum Collection": "प्लेटिनम संग्रह",
+  "Diamond Collection": "डायमंड संग्रह"
 }
