--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -4,61 +4,61 @@
   "Game": "اللعبة",
   "Tasks": "المهام",
   "Profile": "الملف الشخصي",
-  "+ Add boosts": "+ أضف تعزيزات",
+  "+ Add boosts": "+ إضافة تعزيزات",
   "Total tokens": "إجمالي الرموز",
   "Language": "اللغة",
-  "Farm tokens": "رموز المزرعة",
-  "Farm": "المزرعة",
-  "Claim": "استلام",
+  "Farm tokens": "زراعة الرموز",
+  "Farm": "مزرعة",
+  "Claim": "المطالبة",
   "Listing price": "سعر الإدراج",
   "Farming end": "نهاية الزراعة",
-  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "سيتم الإعلان عن تاريخ الاستحقاق من قبل الفريق بالقرب من تاريخ الإدراج. ترقبوا التحديثات.",
-  "Airdrop": "توزيع مجاني",
-  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "للمشاركة في التوزيع المجاني، اشترِ رموزًا بقيمة 50 دولارًا أثناء مرحلة البيع المسبق.",
-  "Join the Airdrop": "انضم إلى التوزيع المجاني",
+  "The vesting date will be announced by the team closer to the listing. Stay tuned for updates.": "سيتم الإعلان عن تاريخ الاستحقاق من قبل الفريق بالقرب من الإدراج. تابع التحديثات.",
+  "Airdrop": "إسقاط جوي",
+  "To participate in the airdrop, purchase tokens worth $50 during the presale.": "للمشاركة في الإسقاط الجوي، اشترِ رموزًا بقيمة 50 دولارًا خلال البيع المسبق.",
+  "Join the Airdrop": "انضم إلى الإسقاط الجوي",
   "Join our family": "انضم إلى عائلتنا",
-  "Join the friendly Phenerium family and take part in sweepstakes!": "انضم إلى عائلة Phenerium الودية وشارك في السحوبات!",
+  "Join the friendly Phenerium family and take part in sweepstakes!": "انضم إلى عائلة Phenerium الودودة وشارك في السحوبات!",
   "Invite friends and get 500 PHEN for each!": "ادعُ أصدقاءك واحصل على 500 PHEN لكل واحد!",
   "Invite": "دعوة",
-  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": "نشارك أيضًا في برنامج الإحالة التابع لتليغرام، حيث يمكنك الحصول على 50٪ من النجوم التي ينفقها أصدقاؤك!",
-  "Paste your Telegram referral link below and share for free Stars!": "الصق رابط الإحالة لتليغرام أدناه وشاركه للحصول على نجوم مجانية!",
+  "We also participate in the Telegram affiliate referral program, where you can get 50% of the Stars your friends spend!": "نشارك أيضًا في برنامج الإحالة التابع لـ Telegram، حيث يمكنك الحصول على 50% من النجوم التي ينفقها أصدقاؤك!",
+  "Paste your Telegram referral link below and share for free Stars!": "الصق رابط الإحالة الخاص بك في Telegram أدناه وشاركه للحصول على نجوم مجانية!",
   "Invite for free Stars": "ادعُ للحصول على نجوم مجانية",
-  "Where can I get a Telegram referral link?": "أين يمكنني الحصول على رابط الإحالة في تليغرام؟",
+  "Where can I get a Telegram referral link?": "أين يمكنني الحصول على رابط إحالة Telegram؟",
   "Open Phenerium": "افتح Phenerium",
   "Open Phenerium, and go to the info menu.": "افتح Phenerium وانتقل إلى قائمة المعلومات.",
-  "Find Affiliate Program": "ابحث عن برنامج الشراكة",
-  "Scroll to 'Affiliate Program' and select one.": "مرر إلى 'برنامج الشراكة' واختر أحدها.",
+  "Find Affiliate Program": "ابحث عن برنامج الإحالة",
+  "Scroll to 'Affiliate Program' and select one.": "انتقل إلى 'برنامج الإحالة' واختر واحدًا.",
   "Copy Link": "انسخ الرابط",
-  "Locate the referral link and copy it.": "حدد رابط الإحالة وانسخه.",
-  "Go to 'Friends'": "اذهب إلى 'الأصدقاء'",
+  "Locate the referral link and copy it.": "ابحث عن رابط الإحالة وانسخه.",
+  "Go to 'Friends'": "انتقل إلى 'الأصدقاء'",
   "Return to Phenerium and go to the 'Friends' section.": "ارجع إلى Phenerium وانتقل إلى قسم 'الأصدقاء'.",
   "Paste and Done": "الصق وانتهى",
   "Paste the link into the field and press 'Done'.": "الصق الرابط في الحقل واضغط على 'تم'.",
-  "Get Bonus": "احصل على المكافأة",
-  "Bonus will be credited automatically after submission.": "سيتم إضافة المكافأة تلقائيًا بعد الإرسال.",
+  "Get Bonus": "احصل على مكافأة",
+  "Bonus will be credited automatically after submission.": "سيتم تسجيل المكافأة تلقائيًا بعد الإرسال.",
   "Farming Boosts": "تعزيزات الزراعة",
   "You dont have any boosts 😔": "ليس لديك أي تعزيزات 😔",
-  "Add Boosts": "أضف تعزيزات",
+  "Add Boosts": "إضافة تعزيزات",
   "Buy": "شراء",
   "Select Language": "اختر اللغة",
   "No content": "لا يوجد محتوى",
-  "Cases": "الحالات",
-  "Robot Assistants": "المساعدون الآليون",
-  "Roadmap": "خريطة الطريق",
-  "Cosmo Forge": "حدادة كوزمو",
+  "Cases": "صناديق",
+  "Robot Assistants": "مساعدون آليون",
+  "Roadmap": "خارطة الطريق",
+  "Cosmo Forge": "صيغة كوزمو",
   "Shuttle Dock": "رصيف المكوك",
-  "Warehouse": "المستودع",
+  "Warehouse": "مستودع",
   "Collections ✨": "المجموعات ✨",
   "Basic": "أساسي",
-  "Bronze": "برونزي",
+  "Bronze": "مستودع",
   "Silver": "فضي",
   "Gold": "ذهبي",
   "Platinum": "بلاتيني",
-  "Diamond": "ماسي",
-  "Friends": "الأصدقاء",
-  "Bronze Collection": "مجموعة برونزية",
-  "Silver Collection": "مجموعة فضية",
-  "Gold Collection": "مجموعة ذهبية",
-  "Platinum Collection": "مجموعة بلاتينية",
-  "Diamond Collection": "مجموعة ماسية"
+  "Diamond": "ألماسي",
+  "Friends": "أصدقاء",
+  "Bronze Collection": "المجموعة البرونزية",
+  "Silver Collection": "المجموعة الفضية",
+  "Gold Collection": "المجموعة الذهبية",
+  "Platinum Collection": "المجموعة البلاتينية",
+  "Diamond Collection": "المجموعة الألماسية"
 }
